Added more comments throughout. Ran log regression on 2/3pts and superstars and summarised with dot and whisker plot. Also added contested shot analysis (confusing outcome) and tested a 3d scatter.

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"dbplyr\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"matrixStats\", \"glmnet\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"lme4\", \"lmerTest\", \"pROC\", \"matrixStats\", \"glmnet\", \"broom\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
@@ -25,11 +25,11 @@
     "library(dtplyr) # Use dplyr syntax, but with a datatable backend - faster.\n",
     "library(lme4)\n",
     "library(lmerTest)\n",
-    "library(dbscan)\n",
     "library(pROC)\n",
     "library(caTools)\n",
     "library(matrixStats)\n",
-    "library(glmnet)"
+    "library(glmnet)\n",
+    "library(broom)"
    ]
   },
   {
@@ -179,6 +179,8 @@
    },
    "outputs": [],
    "source": [
+    "# Listings of top 2pt/3pt scorers. Can be deleted, but ideas important for later.\n",
+    "\n",
     "l1 <- raw_shots %>%\n",
     "    left_join(player_info %>% select(Pos, PLAYER_NAME), by = \"PLAYER_NAME\", relationship=\"many-to-many\") %>%\n",
     "    filter(!is.na(Pos)) %>%\n",
@@ -227,9 +229,12 @@
    },
    "outputs": [],
    "source": [
+    "# If the points are close at the end of the third quarter, is the home team more likely to take the win in subsequent period(s)?\n",
+    "# Note this approach doesn't include every point as the data we have is incomplete (pointed out during lab session)\n",
+    "\n",
     "home_games <- clean_shots %>%\n",
     "    filter(LOCATION == \"H\") %>%\n",
-    "    select(GAME_ID, HOME_TEAM, AWAY_TEAM, WIN_LOSE) %>%\n",
+    "    select(GAME_ID, HOME_TEAM, AWAY_TEAM, WIN_LOSE, FINAL_MARGIN) %>%\n",
     "    distinct(GAME_ID, .keep_all=TRUE)\n",
     "\n",
     "home_advantage_p3 <- clean_shots %>%\n",
@@ -250,7 +255,23 @@
     "\n",
     "home_advantage_p3\n",
     "\n",
-    "binom.test(x=home_advantage_p3$home_wins, n=home_advantage_p3$total_games, p=0.5, alternative=\"greater\")"
+    "binom.test(x=home_advantage_p3$home_wins, n=home_advantage_p3$total_games, p=0.5, alternative=\"greater\")\n",
+    "\n",
+    "# It turns out this isn't a significant effect, maybe we can try using FINAL_MARGIN, which is the point difference at the end.\n",
+    "\n",
+    "home_advantage_fm <- home_games %>% \n",
+    "    filter(abs(FINAL_MARGIN) <= 3) %>%\n",
+    "    summarise(home_pct_win = sum(WIN_LOSE == \"W\")/n(),\n",
+    "             home_wins = sum(WIN_LOSE == \"W\"),\n",
+    "             total_games = n())\n",
+    "\n",
+    "home_advantage_fm\n",
+    "\n",
+    "# Even worse! Maybe it's actually a detriment to be the home team in fact? Let's check.\n",
+    "\n",
+    "binom.test(x = home_advantage_fm$home_wins, n = home_advantage_fm$total_games, p=0.5, alternative = \"less\")\n",
+    "\n",
+    "# Unfortunately we don't have significance here either!"
    ]
   },
   {
@@ -333,7 +354,7 @@
     "  )\n",
     "\n",
     "\n",
-    "# For example I'm using the following rule below: Use the height data from the course if it exists, otherwise take the average of the other two.\n",
+    "# For example we're using the following rule below: Use the height data from the course if it exists, otherwise take the average of the other two.\n",
     "# Note, in the case one of the other two heights is NA it will use the valid one.\n",
     "\n",
     "player_height_pos <- player_height_pos %>%\n",
@@ -348,8 +369,10 @@
     "\n",
     "# Finally join the \"more complete\" height data onto the shot data.\n",
     "# Double join to get the defenders height data too - trick with renaming columns.\n",
+    "# After we have a complete model dataset here, we can split it up and only then we can convert to factors.\n",
+    "# Ignoring overtime for now.\n",
     "\n",
-    "model_data <- clean_shots %>% \n",
+    "model_data_clean <- clean_shots %>% \n",
     "    select(all_of(predictors)) %>%\n",
     "    left_join(player_height_pos %>% select(PLAYER_NAME, HEIGHT), by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
     "    rename(SHOOTER_HEIGHT = HEIGHT) %>%\n",
@@ -357,30 +380,25 @@
     "        by=\"CLOSEST_DEFENDER\", relationship = \"many-to-many\") %>%\n",
     "    rename(DEFENDER_HEIGHT = HEIGHT) %>%\n",
     "    mutate(SHOOTER_HEIGHT_ADV = SHOOTER_HEIGHT - DEFENDER_HEIGHT) %>%\n",
-    "    filter(PERIOD <= 4) %>%\n",
-    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\", \"PTS_TYPE\"), as.factor))\n",
+    "    filter(PERIOD <= 4)\n",
     "\n",
-    "\n",
-    "set.seed(0)\n",
-    "\n",
-    "# Base r approach for model test/train split. Avoids using caret\n",
-    "train_indices <- sample(1:nrow(model_data), size = 0.70 * nrow(model_data))\n",
-    "train_data <- model_data[train_indices, ]\n",
-    "test_data <- model_data[-train_indices, ]\n",
     "\n",
     "# Using height data is hard and some players aren't present in any of the three height datasets I found.\n",
     "# Who are these missing players? Do this in two steps...\n",
     "\n",
-    "shooters_na <- model_data %>%\n",
-    "  filter(is.na(SHOOTER_HEIGHT)) %>%\n",
-    "  distinct(name = PLAYER_NAME)\n",
+    "shooters_na <- model_data_clean %>%\n",
+    "    filter(is.na(SHOOTER_HEIGHT)) %>%\n",
+    "    distinct(name = PLAYER_NAME)\n",
     "\n",
-    "defenders_na <- model_data %>%\n",
-    "  filter(is.na(DEFENDER_HEIGHT)) %>%\n",
-    "  distinct(name = CLOSEST_DEFENDER)\n",
+    "defenders_na <- model_data_clean %>%\n",
+    "    filter(is.na(DEFENDER_HEIGHT)) %>%\n",
+    "    distinct(name = CLOSEST_DEFENDER)\n",
     "\n",
     "bind_rows(shooters_na, defenders_na) %>%\n",
-    "  distinct()\n",
+    "    distinct() %>%\n",
+    "    rename(missing_players =  name)\n",
+    "\n",
+    "model_data_clean <- na.omit(model_data_clean)\n",
     "\n",
     "# If we restrict ourselves to looking at the height data from this module we can identify a few players with problems. \n",
     "# For example, John Salmons played for NOP and was traded to PHX midseason.\n",
@@ -398,36 +416,32 @@
    },
    "outputs": [],
    "source": [
-    "# Code reuse, sorry!\n",
+    "# Scale everything so we can compare the weight sizes, also scaling is required for lasso regression.\n",
+    "# Make an all_shots dataset, which is the only one we do the test/train split for because we want to examine the AUC.\n",
+    "model_data <- model_data_clean %>%\n",
+    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\", \"PTS_TYPE\"), as.factor))\n",
+    "    \n",
+    "model_data_scaled <- model_data %>% mutate(across(where(is.numeric), scale))\n",
     "\n",
-    "train_data <- train_data %>%\n",
-    "  mutate(\n",
-    "    SHOT_DIST = scale(SHOT_DIST),\n",
-    "    CLOSE_DEF_DIST = scale(CLOSE_DEF_DIST),\n",
-    "    TOUCH_TIME = scale(TOUCH_TIME),\n",
-    "    SHOOTER_HEIGHT_ADV = scale(SHOOTER_HEIGHT_ADV),\n",
-    "    SHOT_CLOCK = scale(SHOT_CLOCK),\n",
-    "    DRIBBLES = scale(DRIBBLES)\n",
-    "  )\n",
+    "set.seed(0)\n",
     "\n",
-    "test_data <- test_data %>%\n",
-    "  mutate(\n",
-    "    SHOT_DIST = scale(SHOT_DIST),\n",
-    "    CLOSE_DEF_DIST = scale(CLOSE_DEF_DIST),\n",
-    "    TOUCH_TIME = scale(TOUCH_TIME),\n",
-    "    SHOOTER_HEIGHT_ADV = scale(SHOOTER_HEIGHT_ADV),\n",
-    "    SHOT_CLOCK = scale(SHOT_CLOCK),\n",
-    "    DRIBBLES = scale(DRIBBLES)\n",
-    "  )\n",
+    "# Base r approach for model test/train split. Avoids using caret\n",
+    "train_indices <- sample(1:nrow(model_data), size = 0.75 * nrow(model_data))\n",
+    "train_data <- model_data_scaled[train_indices, ]\n",
+    "test_data <- model_data_scaled[-train_indices, ]\n",
     "\n",
     "train_data <- na.omit(train_data)\n",
     "test_data <- na.omit(test_data)\n",
     "\n",
-    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + DRIBBLES, \n",
+    "# A note on model specification. We're not putting PTS_TYPE here initially because of how R deals with factors.\n",
+    "# If you do add PTS_TYPE, it will show PTS_TYPE3 as being a significant effect, and say nothing about PTS_TYPE2. \n",
+    "# This is because 2 is chosen as the baseline for the model. Instead we deal with this afterwards\n",
+    "\n",
+    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + DRIBBLES,  \n",
     "                 data=train_data, family=binomial(link=\"logit\"))\n",
     "\n",
-    "# Mixed model tries to account for variance between games and players. Doesn't come to very much variance it turns out\n",
-    "# Could be because of underspecification. No need to include mixed model in report\n",
+    "# Mixed model tries to account for variance between games and players. Doesn't come to very much variance it turns out.\n",
+    "# Could be because of under-specification. No need to include mixed model in report.\n",
     "\n",
     "#log_mixed_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK\n",
     "#                         + (1 | GAME_ID) + (1 | PLAYER_NAME),\n",
@@ -457,9 +471,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Investigating the coefficients and if they are significant.\n",
+    "# At this point there is no splitting the model for only 2 pointers/ only superstars etc. This comes after.\n",
     "summary(log_model)\n",
-    "summary(log_lasso_model)\n",
     "log_lasso_model$beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7bced04-e4e3-455a-8d88-c02b363ad7de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dealing with just the regular log model, let's see what happens to the weights if we make a model for 2 and 3 pointers separately.\n",
+    "# Fit with the whole dataset this time, we only need a train/test split for lasso and computing ROC.\n",
+    "# Finally we fit a models for superstar players, and I've excluded them from the normal data but maybe this is pedantic.\n",
+    "\n",
+    "superstars = c(\"Marc Gasol\", \"Steph Curry\", \"Anthony Davis\", \"Lebron James\", \"James Harden\") # This is arbitrary, so this is just a team of good players.\n",
+    "\n",
+    "model_data_2pt <- model_data_scaled %>% filter(PTS_TYPE == 2 & !PLAYER_NAME %in% superstars)\n",
+    "model_data_3pt <- model_data_scaled %>% filter(PTS_TYPE == 3 & !PLAYER_NAME %in% superstars)\n",
+    "model_data_super <- model_data_scaled %>% filter(PLAYER_NAME %in% superstars)\n",
+    "model_data_super_2pt <- model_data_super %>% filter(PTS_TYPE == 2)\n",
+    "model_data_super_3pt <- model_data_super %>% filter(PTS_TYPE == 3)\n",
+    "\n",
+    "# Repetitive but only to make sure the models are correct. A more concise syntax can be used if I filtered the data to only have the predictor cols.\n",
+    "\n",
+    "log_model_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "                     data = model_data_2pt, family = binomial(link = \"logit\"))\n",
+    "log_model_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "                     data = model_data_3pt, family = binomial(link = \"logit\"))\n",
+    "#log_model_super <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "#                     data = model_data_super, family = binomial(link = \"logit\"))\n",
+    "\n",
+    "log_model_super_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "                     data = model_data_super_2pt, family = binomial(link = \"logit\"))\n",
+    "log_model_super_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "                     data = model_data_super_3pt, family = binomial(link = \"logit\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53cabb6c-608c-430f-9f4d-5d3d539e5679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's take a look at the coefficients, use Wald's CI to make it easy\n",
+    "coefs_plot <- bind_rows(\n",
+    "    tidy(log_model_2pt)   %>% mutate(model = \"2PT\"),\n",
+    "    tidy(log_model_3pt)   %>% mutate(model = \"3PT\"),\n",
+    "    tidy(log_model_super_2pt) %>% mutate(model = \"Superstar 2PT\"),\n",
+    "    tidy(log_model_super_3pt) %>% mutate(model = \"Superstar 3PT\"),\n",
+    "  ) %>%\n",
+    "  filter(term != \"(Intercept)\") %>%\n",
+    "  mutate(\n",
+    "    # Wald CI here, 1.96 is a normal dist value.\n",
+    "    lower = estimate - 1.96 * std.error,\n",
+    "    upper = estimate + 1.96 * std.error,\n",
+    "    sig   = p.value <= 0.05\n",
+    "  )\n",
+    "options(repr.plot.width=15, repr.plot.height=8)\n",
+    "ggplot(coefs_plot, aes(x = estimate, y = term, colour = model, shape = sig)) +\n",
+    "  geom_vline(xintercept = 0, linetype = \"dashed\", colour = \"grey50\") +\n",
+    "  geom_errorbarh(aes(xmin = lower, xmax = upper),\n",
+    "                 height = 0.2,\n",
+    "                 linewidth = 1.2,\n",
+    "                 position = position_dodge(width = 0.7)) +\n",
+    "  geom_point(position = position_dodge(width = 0.7), size = 4) +\n",
+    "  scale_color_brewer(palette = \"Dark2\") +\n",
+    "  scale_shape_manual(\n",
+    "    values = c(`FALSE` = 1, `TRUE` = 16),\n",
+    "    labels = c(`FALSE` = \"Not significant\", `TRUE` = \"Significant\")\n",
+    "  ) +\n",
+    "  labs(\n",
+    "    title  = \"Model Coefficients\",\n",
+    "    x      = \"Log-Odds Estimate\",\n",
+    "    y      = NULL,\n",
+    "    colour = \"Model\",\n",
+    "    shape  = \"Significance\"\n",
+    "  ) +\n",
+    "  theme_minimal(base_size = 14) +\n",
+    "  theme(\n",
+    "    panel.grid.major.y = element_blank(),\n",
+    "    axis.text.y = element_text(face = \"bold\"),\n",
+    "    plot.title = element_text(face = \"bold\"),\n",
+    "    legend.position    = \"bottom\"\n",
+    "  )\n",
+    "\n",
+    "# The large CI on superstart 3pts is strange. We expect the sample sizes to be different, let's check.\n",
+    "\n",
+    "model_data_super_3pt %>% summarise(len = n())\n",
+    "model_data_3pt %>% summarise(len = n())"
    ]
   },
   {
@@ -469,9 +573,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Residual deviance and ROC plots. Probably don't include deviance in report but AUROC could work.\n",
+    "# Phrasing would be: AUROC low so we know these features don't fully explain if a shot will go in or not.\n",
+    "# (Deviance tells the same story)\n",
+    "\n",
     "model_roc <- function(model, test_data) {\n",
     "    pred_prob <- predict(model, newdata = test_data, type=\"response\")\n",
-    "    roc_obj <- roc(test_data$SUCCESS, as.vector(pred_prob), ci=TRUE)\n",
+    "    roc_obj <- roc(test_data$SUCCESS, as.vector(pred_prob), ci = TRUE, quiet = TRUE)\n",
     "    return(roc_obj)\n",
     "}\n",
     "\n",
@@ -484,7 +592,7 @@
     "    resid_plot <- ggplot(plot_data, aes(x = fitted, y = residuals)) +\n",
     "    geom_point(alpha = 0.3, size = 0.8) +\n",
     "    geom_hline(yintercept = 0, color = \"red\", linetype = \"dashed\") + \n",
-    "    geom_smooth() +\n",
+    "    geom_smooth(method = \"gam\", formula = y ~ s(x, bs = \"cs\")) + # the default warning message was annoying\n",
     "    labs(\n",
     "        title = paste0(title_str, \": Residuals vs Fitted\"),\n",
     "        subtitle = \"Deviance residuals plotted against predicted probabilities\",\n",
@@ -501,37 +609,16 @@
     "    return(resid_plot)\n",
     "}\n",
     "\n",
-    "residual_qqplot <- function(model) {\n",
-    "    resid_qq <- ggplot(data.frame(resid = residuals(model, type=\"deviance\")), aes(sample = resid)) +\n",
-    "    stat_qq() +\n",
-    "    stat_qq_line() +\n",
-    "    labs(title = \"Q-Q Plot of GLM Deviance Residuals\",\n",
-    "       x = \"Theoretical Quantiles\",\n",
-    "       y = \"Sample Quantiles\")\n",
-    "    return(resid_qq)\n",
-    "}\n",
-    "\n",
-    "model_roc(log_model, test_data)$ci\n",
-    "model_roc(log_mixed_model, test_data)$ci\n",
-    "#pred_prob <- predict(log_lasso_model, newx = x_test, type=\"response\")\n",
-    "#roc(y_test, as.vector(pred_prob), ci=TRUE)$ci\n",
-    "\n",
-    "#log_model2 <- glm(SUCCESS ~ poly(SHOT_DIST, 2) + poly(CLOSE_DEF_DIST, 2) + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, \n",
-    "#                 data=train_data, family=binomial(link=\"logit\"))\n",
-    "\n",
+    "model_roc(log_model, test_data)\n",
     "residual_deviance_plot(log_model, \"Logistc model\")\n",
-    "residual_deviance_plot(log_mixed_model, \"Logistic mixed-effects model\")\n",
-    "residual_qqplot(log_model)\n",
     "\n",
     "\n",
     "pred_prob <- predict(log_model, newdata = test_data, type=\"response\")\n",
     "\n",
     "roc_obj <- roc(test_data$SUCCESS, as.vector(pred_prob), ci=TRUE)\n",
-    "plot(roc_obj)\n",
-    "#sens.ci <- ci.se(roc_obj, specificities=seq(0, 1, 100))\n",
-    "#plot(sens.ci, type=\"shape\", col=\"lightblue\")\n",
-    "\n",
-    "#plot(roc_obj, add=TRUE)"
+    "plot(roc_obj, col = \"#2C3E50\", lwd = 2, main = \"ROC Curve for Logistic Model\")\n",
+    "auc_text <- paste0(\"AUC = \", round(auc(roc_obj), 3))\n",
+    "legend(\"bottomright\", legend = auc_text, col = \"#2C3E50\", lwd = 2)"
    ]
   },
   {
@@ -578,7 +665,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4997c701-5598-4267-9089-3a288a0dabf1",
+   "id": "d16a243e-9b95-4122-ac89-de544c4e1b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What about touch time when the shot is contested?\n",
+    "contested_shots <- model_data_clean %>%\n",
+    "    mutate(contested = case_when(\n",
+    "        CLOSE_DEF_DIST <= 4 ~ \"Contested\",\n",
+    "        .default = \"Not contested\"  \n",
+    "    )) %>%\n",
+    "    group_by(GAME_ID, contested) %>%\n",
+    "    summarise(mean_tt = mean(TOUCH_TIME), .groups = \"drop\")\n",
+    "\n",
+    "\n",
+    "ggplot(contested_shots, aes(x = contested, y = mean_tt, fill = contested)) +\n",
+    "  geom_boxplot(alpha = 0.7, outlier.shape = NA) +\n",
+    "  scale_fill_manual(values = c(\"Contested\" = \"#E69F00\", \"Not contested\" = \"#56B4E9\")) +\n",
+    "  labs(\n",
+    "    title = \"Distribution of Mean TT by Contested Status\",\n",
+    "    x     = \"Contested?\",\n",
+    "    y     = \"Mean TT\"\n",
+    "  ) +\n",
+    "  theme_minimal() +\n",
+    "  theme(legend.position = \"none\")\n",
+    "\n",
+    "# There is definitely more to this than meets the eye..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34424e7c-12e2-47f9-821a-ed108acf6519",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Experimenting here, but doesn't look too impressive.\n",
+    "library(scatterplot3d)\n",
+    "scatterplot3d(\n",
+    "  x = model_data_clean$CLOSE_DEF_DIST,\n",
+    "  y = model_data_clean$TOUCH_TIME,\n",
+    "  z = model_data_clean$SHOT_DIST,\n",
+    "  color = \"darkred\",\n",
+    "  pch = 19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae20364-f920-48e7-b26d-2aeb609f1a55",
    "metadata": {},
    "outputs": [],
    "source": []
