some changes to superstar list and section about data problems added. Rmd next

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -29,7 +29,8 @@
     "library(caTools)\n",
     "library(matrixStats)\n",
     "library(glmnet)\n",
-    "library(broom)"
+    "library(broom)\n",
+    "library(glue)"
    ]
   },
   {
@@ -236,6 +237,14 @@
     "    filter(LOCATION == \"H\") %>%\n",
     "    select(GAME_ID, HOME_TEAM, AWAY_TEAM, WIN_LOSE, FINAL_MARGIN) %>%\n",
     "    distinct(GAME_ID, .keep_all=TRUE)\n",
+    "\n",
+    "# We test the home win percentage directly first\n",
+    "\n",
+    "home_games %>% summarise(total = n(), home_wins = sum(WIN_LOSE == \"W\"))\n",
+    "\n",
+    "# So the home team is statistically more likely to win a game\n",
+    "\n",
+    "binom.test(x=506, n=904, p=0.5, alternative=\"greater\")\n",
     "\n",
     "home_advantage_p3 <- clean_shots %>%\n",
     "    filter(PERIOD <= 3) %>%\n",
@@ -488,7 +497,8 @@
     "# Fit with the whole dataset this time, we only need a train/test split for lasso and computing ROC.\n",
     "# Finally we fit a models for superstar players, and I've excluded them from the normal data but maybe this is pedantic.\n",
     "\n",
-    "superstars = c(\"Marc Gasol\", \"Steph Curry\", \"Anthony Davis\", \"Lebron James\", \"James Harden\") # This is arbitrary, so this is just a team of good players.\n",
+    "superstars = c(\"Steph Curry\", \"Anthony Davis\", \"Lebron James\", \"James Harden\", \"Russel Westbrook\", \"Kyrie Irving\",\n",
+    "              \"Demarcus Cousins\", \"Klay Thompson\", \"Dwayne Wade\", \"Damian Lillard\") # This is arbitrary, so this is just a team of good players.\n",
     "\n",
     "model_data_2pt <- model_data_scaled %>% filter(PTS_TYPE == 2 & !PLAYER_NAME %in% superstars)\n",
     "model_data_3pt <- model_data_scaled %>% filter(PTS_TYPE == 3 & !PLAYER_NAME %in% superstars)\n",
@@ -498,16 +508,16 @@
     "\n",
     "# Repetitive but only to make sure the models are correct. A more concise syntax can be used if I filtered the data to only have the predictor cols.\n",
     "\n",
-    "log_model_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "log_model_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV  + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_2pt, family = binomial(link = \"logit\"))\n",
-    "log_model_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "log_model_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_3pt, family = binomial(link = \"logit\"))\n",
     "#log_model_super <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
     "#                     data = model_data_super, family = binomial(link = \"logit\"))\n",
     "\n",
-    "log_model_super_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "log_model_super_2pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_super_2pt, family = binomial(link = \"logit\"))\n",
-    "log_model_super_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + SHOT_CLOCK + DRIBBLES + SHOT_CLOCK, \n",
+    "log_model_super_3pt <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + DRIBBLES + SHOT_CLOCK, \n",
     "                     data = model_data_super_3pt, family = binomial(link = \"logit\"))\n"
    ]
   },
@@ -520,10 +530,10 @@
    "source": [
     "# Let's take a look at the coefficients, use Wald's CI to make it easy\n",
     "coefs_plot <- bind_rows(\n",
-    "    tidy(log_model_2pt)   %>% mutate(model = \"2PT\"),\n",
-    "    tidy(log_model_3pt)   %>% mutate(model = \"3PT\"),\n",
-    "    tidy(log_model_super_2pt) %>% mutate(model = \"Superstar 2PT\"),\n",
-    "    tidy(log_model_super_3pt) %>% mutate(model = \"Superstar 3PT\"),\n",
+    "    tidy(log_model_2pt)   %>% mutate(model = glue(\"2PT, n={nrow(model_data_2pt)}\")),\n",
+    "    tidy(log_model_3pt)   %>% mutate(model = glue(\"3PT, n={nrow(model_data_3pt)}\")),\n",
+    "    tidy(log_model_super_2pt) %>% mutate(model = glue(\"Superstar 2PT, n={nrow(model_data_super_2pt)}\")),\n",
+    "    tidy(log_model_super_3pt) %>% mutate(model = glue(\"Superstar 3PT, n={nrow(model_data_super_3pt)}\")),\n",
     "  ) %>%\n",
     "  filter(term != \"(Intercept)\") %>%\n",
     "  mutate(\n",
@@ -560,10 +570,7 @@
     "    legend.position    = \"bottom\"\n",
     "  )\n",
     "\n",
-    "# The large CI on superstart 3pts is strange. We expect the sample sizes to be different, let's check.\n",
-    "\n",
-    "model_data_super_3pt %>% summarise(len = n())\n",
-    "model_data_3pt %>% summarise(len = n())"
+    "# The large CI on superstart 3pts is strange. We expect the sample sizes to be different, let's check. (Added to plot now)"
    ]
   },
   {
@@ -690,7 +697,24 @@
     "  theme_minimal() +\n",
     "  theme(legend.position = \"none\")\n",
     "\n",
-    "# There is definitely more to this than meets the eye..."
+    "# There is definitely more to this than meets the eye...\n",
+    "# How about the success probability of contested shots?\n",
+    "\n",
+    "contested_success_rate <- model_data_clean %>%\n",
+    "    mutate(contested = case_when(\n",
+    "        CLOSE_DEF_DIST <= 4 ~ \"Contested\",\n",
+    "        .default = \"Not contested\"  \n",
+    "    )) %>% \n",
+    "    summarise(total_shots = n(),\n",
+    "             contested_shots = sum(contested == \"Contested\"),\n",
+    "             contested_successful = sum(SUCCESS == 1 & contested == \"Contested\"),\n",
+    "             prop = contested_successful/contested_shots)\n",
+    "\n",
+    "contested_success_rate\n",
+    "\n",
+    "\n",
+    "binom.test(x=contested_success_rate$contested_successful, n=contested_success_rate$contested_shots, p=0.5, alternative=\"less\")\n",
+    "# Finally a significant result, even though the conclusion isn't surprising. "
    ]
   },
   {
@@ -703,8 +727,8 @@
     "# Experimenting here, but doesn't look too impressive.\n",
     "library(scatterplot3d)\n",
     "scatterplot3d(\n",
-    "  x = model_data_clean$CLOSE_DEF_DIST,\n",
-    "  y = model_data_clean$TOUCH_TIME,\n",
+    "  y = model_data_clean$CLOSE_DEF_DIST,\n",
+    "  x = model_data_clean$TOUCH_TIME,\n",
     "  z = model_data_clean$SHOT_DIST,\n",
     "  color = \"darkred\",\n",
     "  pch = 19)"
@@ -714,6 +738,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cae20364-f920-48e7-b26d-2aeb609f1a55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lebron isn't the best player? Can it be?\n",
+    "# Here it says that he only played 51 games, but official stats (ESPN/Basketball reference) say he played 69 games! (Regular season)\n",
+    "# James Harden actually played in 81 games!\n",
+    "model_data_clean %>%\n",
+    "    mutate(pts = PTS_TYPE * SUCCESS) %>%\n",
+    "    group_by(PLAYER_NAME) %>%\n",
+    "    summarise(\n",
+    "        total_pts   = sum(pts),\n",
+    "        games_played = n_distinct(GAME_ID),\n",
+    "        avg_pts_game = total_pts / games_played,\n",
+    "        .groups = \"drop\"\n",
+    "    ) %>% arrange(desc(avg_pts_game))\n",
+    "\n",
+    "\n",
+    "model_data_clean %>% summarise(count = n_distinct(GAME_ID))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a32261b-3a4d-4d1c-97b4-0f978b9ed7c9",
    "metadata": {},
    "outputs": [],
    "source": []
